--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
         class="h-navigation__elements"
         [routerLink]="['questions']"
       >
-        <i class="icon-email"></i>x
+        <i class="icon-email"></i>
         Questions
       </a>
     </li>
