--- a/src/app/payments/select-membership/select-membership.component.html
+++ b/src/app/payments/select-membership/select-membership.component.html
@@ -2,17 +2,13 @@
 
   <div>
     <h2 class="subtitle">Select your plan</h2>
-    <i class="subtitle__small">Multiple memeberships must be purchased individualy</i>
+    <i class="subtitle__small">Multiple memberships must be purchased individually</i>
   </div>
 
   <div *ngIf="home">
     <div class="row ">
       <div class="col-2-of-4">
-        <div
-          [class.active]="membership?.number == 0"
-          class="membership row "
-          (click)="setPayload(0)"
-        >
+        <div [class.active]="membership?.number == 0" class="membership row " (click)="setPayload(0)">
           <div class="membership__flex">
             <div>
               <h4 class="membership__package-name">6 months support</h4>
@@ -31,11 +27,7 @@
 
 
       <div class="col-2-of-4">
-        <div
-          [class.active]="membership?.number == 1"
-          class="membership membership--blue row "
-          (click)="setPayload(1)"
-        >
+        <div [class.active]="membership?.number == 1" class="membership membership--blue row " (click)="setPayload(1)">
           <div class="membership__flex">
             <div>
               <h4 class="membership__package-name">12 months support</h4>
@@ -52,11 +44,7 @@
     </div>
 
     <div class="row">
-      <button
-        (click)="onProceed()"
-        [class.button--checkout-active]="membership?.selected"
-        class="button--checkout"
-      >
+      <button (click)="onProceed()" [class.button--checkout-active]="membership?.selected" class="button--checkout">
         <span>Proceed to pay</span>
         <i class="icon-arrow-right"></i>
       </button>
