--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -235,3 +235,14 @@
   position: absolute;
   left: 1.5rem;
 }
+
+.icon-quote-right-solid{
+  float: right;
+}
+    
+
+.icon-quote-left-solid,
+.icon-quote-right-solid {
+  font-size: 4rem;
+  color: #32325d;
+}
