--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -5,7 +5,10 @@
   <app-medical-background></app-medical-background>
 </div>
 
-<div class=" row">
+<div
+  class=" row"
+  *ngIf="usersPayload.medical?.length !== 0"
+>
 
   <div class="col-2-of-4">
     <div class="card">
@@ -143,7 +146,10 @@
   </div>
 
 </div>
-<div class="row">
+<div
+  class="row"
+  *ngIf="usersPayload.medical?.length !== 0"
+>
   <div class="col-2-of-4">
     <div class="card">
       <div class="card__flex">
