--- a/src/app/dashboard/questions/questions.component.html
+++ b/src/app/dashboard/questions/questions.component.html
@@ -5,10 +5,7 @@
 
   <!-- CONTROLL -->
   <div class="conversation__controls">
-    <i
-      (click)="activeElement = 'newQuestion' "
-      class="button--respond"
-    >New Question</i>
+    <i (click)="activeElement = 'newQuestion' " class="button--respond">New Question</i>
   </div>
 
   <!-- LIST OF MESSAGES -->
@@ -18,16 +15,8 @@
       <span>({{ questionsList?.length}}) </span>
     </div>
 
-    <div
-      *ngFor="let userQ  of questionsList ;let i=index "
-      (click)=" selectMessage(i)"
-    >
-      <div
-        class="list__container"
-        [ngClass]="{active: isClicked[i]}"
-        (click)="activeElement = ' ' "
-        #questionBox
-      >
+    <div *ngFor="let userQ  of questionsList ;let i=index " (click)=" selectMessage(i)">
+      <div class="list__container" [ngClass]="{active: isClicked[i]}" (click)="activeElement = ' ' " #questionBox>
         <div class="">
           <div class="list__user-date">
             <span class="text--username">You have asked:</span>
@@ -40,50 +29,37 @@
   </div>
 
   <!-- No content -->
-  <div
-    *ngIf="activeElement == '' &&  this.isClicked.length == 0 "
-    class="messages new-question"
-  >
+  <div *ngIf="activeElement == '' &&  this.isClicked.length == 0 " class="messages new-question">
     <h2 class="conversation__select_question">Select or ask a new question </h2>
   </div>
 
   <!-- NEw FORM -->
-  <form
-    *ngIf="activeElement == 'newQuestion'"
-    [formGroup]="question"
-    (ngSubmit)="askQuestion()"
-    class="card"
-  >
-    <h2 class="subtitle--left-small"></h2>
-    <div class="editor">
-      <div class="editor__header">
-        <span> Subject </span>
-        <input
-          formControlName="subject"
-          type="text"
-          placeholder="Question title"
-        >
-      </div>
-      <div class="editor__text-area">
-        <textarea
-          formControlName="content"
-          placeholder="How can we help you?"
-        ></textarea>
-      </div>
+  <form *ngIf="activeElement == 'newQuestion'" [formGroup]="question" (ngSubmit)="askQuestion()" class="card">
+    <div *ngIf="sentQuestions" class="conversation__question-confirmation">
+      <h2> Thank you! </h2>
+      Your message has been successfully sent
     </div>
-    <button
-      type="submit"
-      class="button--blue"
-    >Send</button>
+    <div *ngIf="!sentQuestions">
+      <h2 class="subtitle--left-small"></h2>
+      <div class="editor">
+        <span> How can we help you today? </span>
+        <div class="editor__header">
+
+          <input formControlName="subject" type="text" placeholder="Please type your question">
+        </div>
+        <div class="editor__text-area">
+          <textarea formControlName="content" placeholder="Can you add details in regards to your question?"></textarea>
+        </div>
+      </div>
+      <button type="submit" class="button--blue">Send</button>
+    </div>
+
   </form>
 
 
 
   <!-- EMAILS -->
-  <div
-    class="messages"
-    *ngIf="this.activeElement == ' ' && this.isClicked.length >= 1"
-  >
+  <div class="messages" *ngIf="this.activeElement == ' ' && this.isClicked.length >= 1">
     <span class="text--message-details">Date: {{currentMessage.date | date}}
     </span>
     <hr>
@@ -93,20 +69,15 @@
       Details: {{currentMessage.content}}
     </p>
     <hr>
-
-
     <p>
       <strong>Doctor's answer:</strong>
       <br>
       <span *ngIf="!currentMessage.doctosAnswer">This answer will be answer shortly</span>
-      <span> {{currentMessage.doctosAnswer}}</span>
+      <span> {{currentMessage.doctosAnswer.answer}}</span>
     </p>
     <!-- <hr> -->
     <p class="conversation__main-response">
-      <div
-        class="conversation__replies"
-        *ngFor="let item of currentMessage.comments"
-      >
+      <div class="conversation__replies" *ngFor="let item of currentMessage.comments">
         <div class="conversation__indicator--user">
           <strong class="text--category"> {{item.user}} </strong>
           <p class="date"> {{item.comment}} </p>
@@ -120,12 +91,8 @@
       <div class="editor__text-area">
         <form>
 
-          <textarea
-            class="editor__text-area"
-            placeholder="Type your response here..."
-            name="commentResponse"
-            [(ngModel)]="commentResponse"
-          ></textarea>
+          <textarea class="editor__text-area" placeholder="Type your response here..." name="commentResponse"
+            [(ngModel)]="commentResponse"></textarea>
 
           <!-- <div
             appFileUpload
@@ -136,11 +103,7 @@
             <span>DROP YOUR FILES HERE</span>
           </div> -->
 
-          <button
-            (click)="commentOnQuestion()"
-            type="submit"
-            class="button--blue"
-          >Send</button>
+          <button (click)="commentOnQuestion()" type="submit" class="button--blue">Send</button>
         </form>
       </div>
 
