--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -14,16 +14,17 @@
     position: absolute;
     position: relative;
     width: 100%;
-//     display: flex;
-//     justify-content: space-between;
+    //     display: flex;
+    //     justify-content: space-between;
     padding: 1rem $container-padding;
     line-height: 2;
   }
 
   &__burger {
     float: right;
+
     i {
-    font-size: 2.5rem;
+      font-size: 2.5rem;
       margin-top: 1.3rem;
       display: inline-block;
     }
@@ -32,7 +33,7 @@
   &__logo {
     font-size: 2.5rem;
     font-weight: 700;
-        float: left;
+    float: left;
 
     a {
       color: white;
@@ -43,6 +44,10 @@
   &--dark {
     height: 7rem;
     position: relative;
+
+    .row {
+      // max-width: 100vw;
+    }
 
     &.fixed {
       position: fixed;
@@ -104,7 +109,8 @@
     position: absolute;
     right: 7rem;
     top: 2rem;
-    @include tablet{
+
+    @include tablet {
       top: 1rem;
       right: 5rem;
     }
@@ -154,6 +160,7 @@
       float: left;
       margin-left: 2.5%;
       text-align: center;
+      background-color: transparent;
 
       @include tablet {
         width: 30%;
