--- a/src/assets/sass/_hero.scss
+++ b/src/assets/sass/_hero.scss
@@ -3,12 +3,27 @@
   margin-left: -30px;
   position: relative;
 
+
+
+  @include desktop {
+    svg {
+      margin-top: -15%;
+    }
+  }
+
+
+
   small {
     color: #7180ef;
     margin-left: .5rem;
     display: none;
-    @include tablet2{
-      display: inline-block;
+
+    @include tablet2 {
+      display: inline;
+    }
+
+    @include desktop {
+      font-size: 2.5rem;
     }
   }
 }
