--- a/src/assets/sass/_landing.scss
+++ b/src/assets/sass/_landing.scss
@@ -5,7 +5,7 @@ $title-color: #32325d;
   h1 {
     font-size: 5.5vw;
     margin-bottom: 0rem;
-    margin-top: 10%;
+    margin-top: 8%;
     text-shadow: -1px 1px 5px rgba(0, 0, 0, 0.6);
 
     @include tablet {
@@ -253,6 +253,7 @@ $title-color: #32325d;
 
     .heading--green {
       margin-top: 3.5rem;
+      border-bottom: solid;
     }
 
     p{
