--- a/src/assets/sass/_payments.scss
+++ b/src/assets/sass/_payments.scss
@@ -263,6 +263,7 @@
     }
 
     .outcome {
+
       float: left;
       width: 100%;
       padding-top: 8px;
@@ -278,6 +279,7 @@
 
     .success.visible,
     .error.visible {
+      display: none;
       display: inline;
     }
 
